--- a/mystyle.css
+++ b/mystyle.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url("photos/desert.jpeg");
+    background-image: url("photos/mirror.jpeg");
     height: 50%;
     background-position: center;
     background-repeat: no-repeat;
@@ -16,10 +16,7 @@ body {
     padding: 40px 20px 20px 40px;
 }
 
-.white {
-    background-color: whitesmoke;
-    background-size: fill;
-}
+
 h1 {
     text-align: center;
     color: #662900;
@@ -51,18 +48,18 @@ li {
 .image{
     opacity: 1;
     display: block;
-    width: auto;
+    width: 100%;
     height: auto;
     transition: .5s ease;
     backface-visibility: hidden;
-    border-radius: 40px;
+    border-radius: 60px;
 }
 
 .middle {
     transition: .5s ease;
     opacity: 0;
     position: absolute;
-    top: 80%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%)
@@ -85,22 +82,3 @@ li {
     border-width: 3px;
     border-radius: 50px;
 }
-
-
-
-
-
-
-
-
-
-
-/*#bg {
-  position: fixed; 
-  top: 0; 
-  left: 0; 
-	
-  /* Preserve aspet ratio *
-  min-width: 100%;
-  min-height: 100%;
-}*/
